--- a/cajapesaje.ui
+++ b/cajapesaje.ui
@@ -81,22 +81,10 @@
        <item>
         <widget class="QPushButton" name="pushButton_4">
          <property name="sizePolicy">
-          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
-         </property>
-         <property name="minimumSize">
-          <size>
-           <width>36</width>
-           <height>40</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>0</width>
-           <height>16777215</height>
-          </size>
          </property>
          <property name="font">
           <font>
@@ -109,8 +97,8 @@
           <string notr="true">color: rgb(255, 255, 255);</string>
          </property>
          <property name="text">
-          <string>Set
-Port</string>
+          <string>Establecer
+Puerto</string>
          </property>
          <property name="flat">
           <bool>true</bool>
@@ -214,11 +202,12 @@ Port</string>
           <string notr="true">color:white;</string>
          </property>
          <property name="text">
-          <string>Ajustes</string>
+          <string>Reimpresion
+Ticket</string>
          </property>
          <property name="icon">
           <iconset resource="images.qrc">
-           <normaloff>:/images/settings.png</normaloff>:/images/settings.png</iconset>
+           <normaloff>:/images/imp.png</normaloff>:/images/imp.png</iconset>
          </property>
          <property name="iconSize">
           <size>
